# phishing-url-detection-framework

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
archive/experiments/: Asama0_original.ipynb  Dataset_original.ipynb  Untitled1_original.ipynb  asama1_original.ipynb  result_packaging_original.ipynb
archive/legacy_code/: crawler_v1.py  crawler_v2.py  domain_resolver_original.py
archive/preprocessing_drafts/: Untitled2_original.ipynb  Untitled3_original.ipynb
artifacts/deep_learning/: README.md
configs/: data_collection.yaml  deep_learning.yaml  ml_models.yaml
data/: README.md
docs/: README_TR.md  final_project_report.docx  repository_map.md  reproducibility.md
notebooks/data_collection/: 01_legitimate_data_collection.ipynb  02_phishing_data_collection.ipynb  03_dataset_preparation.ipynb
notebooks/deep_learning/: 06_character_cnn_seed_ensemble.ipynb  07_stacked_character_bilstm_seed_ensemble.ipynb  08_cnn_bilstm_seed_ensemble.ipynb
notebooks/machine_learning/: 05_xai_analysis.ipynb
results/deep_learning/: deep_learning_metrics.csv
results/ensemble/: ensemble_metrics.csv
results/ml/: base_model_metrics.csv
results/xai/: xai_summary.csv
scripts/: validate_repo.py
src/data/: crawl_internal_urls.py  resolve_domains.py
src/evaluation/: metrics.py  threshold_search.py
src/explainability/: README.md
src/features/: README.md
src/models/: README.md
