[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-url-detection-framework"
version = "1.0.0"
description = "Dataset construction, ML, XAI, and character-level DL for phishing URL detection"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Elif Ozcelik"}]

[tool.setuptools.packages.find]
include = ["src*"]
